--- a/index-2.html
+++ b/index-2.html
@@ -9,7 +9,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
   <!-- Link para o estilo personalizado -->
   <link rel="stylesheet" href="style-2.css">
-  <link rel="icon" type="image/png" href="imagens/favicon.png">
+  <link rel="icon" type="image/png" href="images/slimeicon.webp">
 </head>
  
 <body>
@@ -21,7 +21,7 @@
       <a href="https://www.exemplo.com" target="_blank">Homes</a>
       <a href="http://127.0.0.1:5500/website_trabaio/info_slime.html" target="_blank">Slimes</a>
       <a href="#galeria">Galeria</a>
-      <a href="http://127.0.0.1:5500/website_trabaio/mapas.html" target="_blank">mapas</a>
+      <a href="http://127.0.0.1:5500/website_trabalho/info_slime.html" target="_blank">mapas</a>
     </nav>
   </header>
  
