--- a/info_slime.html
+++ b/info_slime.html
@@ -29,7 +29,7 @@
     </div>
   </div>
 </nav>
-
+  <link rel="icon" type="image/png" href="images/slimeicon.webp">
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-KyZXEJx3F4ggT7V9Fk9T2Yzfnv8BDMktpfn4GSA4AnMz9QmyyQeN5aGh80zwJp57" crossorigin="anonymous">
