--- a/mapas.html
+++ b/mapas.html
@@ -6,14 +6,20 @@
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <link rel="stylesheet" href="mapas.css">
     <title>Mapas — Slime Rancher (Cards Bonitos)</title>
-
+  <link rel="icon" type="image/png" href="images/slimeicon.webp">
 </head>
 
 <body>
-    <header>
-        <h1>Mapas — Slime Rancher</h1>
-        <p>Explore os mapas do jogo com informações úteis e visuais encantadores.</p>
-    </header>
+   <header>
+    <div class="logo">Slime Rancher</div>
+    <nav>
+      <a href="https://www.exemplo.com" target="_blank">Homes</a>
+      <a href="http://127.0.0.1:5500/website_trabaio/info_slime.html" target="_blank">Slimes</a>
+      <a href="#galeria">Galeria</a>
+      <a href="http://127.0.0.1:5500/website_trabalho/info_slime.html" target="_blank">mapas</a>
+    </nav>
+  </header>
+ 
 
     <main class="grid">
         <article class="card">
