--- a/mapas.html
+++ b/mapas.html
@@ -13,8 +13,8 @@
    <header>
     <div class="logo">Slime Rancher</div>
     <nav>
-      <a href="https://www.exemplo.com" target="_blank">Homes</a>
-      <a href="http://127.0.0.1:5500/website_trabaio/info_slime.html" target="_blank">Slimes</a>
+      <a href="index-2.html" target="_blank">Homes</a>
+      <a href="info_slime.html" target="_blank">Slimes</a>
       <a href="#galeria">Galeria</a>
       <a href="http://127.0.0.1:5500/website_trabalho/info_slime.html" target="_blank">mapas</a>
     </nav>
