alterei mais coisa

--- a/index-2.html
+++ b/index-2.html
@@ -18,10 +18,10 @@
   <header>
     <div class="logo">Slime Rancher</div>
     <nav>
-      <a href="index-2.html" target="_blank">Homes</a>
-      <a href="info_slime.html" target="_blank">Slimes</a>
-      <a href="#galeria">Galeria</a>
-      <a href="mapas.html" target="_blank">mapas</a>
+      
+      <a href="info_slime.html" target="_self">Slimes</a>
+      <a href="#gallery">Galeria</a>
+      <a href="mapas.html" target="_self">mapas</a>
     </nav>
   </header>
  
@@ -78,7 +78,7 @@
     </div>
   </section>
  
-  <div class="text-center mb-4 mt-5">
+  <div id="gallery"class="text-center mb-4 mt-5">
     <h1 class="fw-bold">Minha Galeria</h1>
  
   </div>
