--- a/info_slime.html
+++ b/info_slime.html
@@ -48,7 +48,7 @@
 
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav">
-      <a href="index-2.html" target="_blank" class="btn-original">
+      <a href="index-2.html" target="_self class="btn-original">
         Home
       </a>
     </ul>
