--- a/mapas.html
+++ b/mapas.html
@@ -13,10 +13,10 @@
    <header>
     <div class="logo">Slime Rancher</div>
     <nav>
-      <a href="index-2.html" target="_blank">Homes</a>
-      <a href="info_slime.html" target="_blank">Slimes</a>
+      <a href="index-2.html" target="_self">Homes</a>
+      <a href="info_slime.html" target="_self">Slimes</a>
       <a href="#galeria">Galeria</a>
-      <a href="http://127.0.0.1:5500/website_trabalho/info_slime.html" target="_blank">mapas</a>
+      
     </nav>
   </header>
  
@@ -40,7 +40,7 @@
                 </div>
                 <div class="actions">
 
-                    <button class="btn ver-mapa" data-img="images?">Ver mapa</button>
+                    <button class="btn ver-mapa" data-img="images/sea.webp">Ver mapa</button>
                 </div>
             </div>
         </article>
