alterei mais coisa

--- a/mapas.html
+++ b/mapas.html
@@ -15,8 +15,9 @@
     <nav>
       <a href="index-2.html" target="_self">Homes</a>
       <a href="info_slime.html" target="_self">Slimes</a>
-      <a href="#galeria">Galeria</a>
-      
+      <a href="index-2.html#gallery">Ir para a Galeria</a>
+   
+
     </nav>
   </header>
  
